# character_debator

./: pyproject.toml
app/: app.py
scripts/: run_app.sh
